2009-04-20  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/home/hd-task-navigator.c (hd_task_navigator_remove_notification):
	Fix Coverity issue when thumb->tnote == NULL.
	* src/launcher/hd-launcher-tile.c (hd_launcher_on_glow_frame): Fix
	Coverity issue when priv->icon_glow == NULL.
	* src/mb/hd-theme.c (back_button_timeout): Silence Coverity by
	checking for c == NULL.
	* src/mb/hd-comp-mgr.c (hd_comp_mgr_handle_stackable): Silence
	Coverity by checking for flink == NULL in one case.
	* src/home/hd-home.c (hd_home_constructed): Add check for the return
	value of gtk_style_lookup_color to silence Coverity. Also white space
	fixes.
	* src/mb/hd-comp-mgr.c: Do not compile most of the debug dumping code
	if g_debug is not compiled. Again to silence Coverity.
	* src/home/hd-home-view-container.c (backgrounds_dir_changed): Do not
	check whether an unsigned int is negative to silence Coverity. Also
	white space fixes.

2009-04-20  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-switcher.c (hd_switcher_something_removed):
	  Exit the switcher if it's become completely empty.
	  Fixes the case when the switcher contains only notifications
	  and you close one of them.

2009-04-20  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/main.c:
	  Abort early if the compositor wasn't turned on, which hildon-desktop
	  doesn't tolerate, and causes it to fail in the most mysterious ways.
	  This may happen if libmatchbox cannot find its theme (eg. accidentally
	  you configure it with --prefix=/usr/local).
	* TODO

2009-04-17  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes NB#111517 and NB#108862
	* src/util/hd-util.c
	* src/util/hd-util.h: Modify hd_util_is_client_system_modal to instead
	  return true only if the client has a modal blocker. Renamed to 
	  hd_util_client_has_modal_blocker
	* src/home/hd-render-manager.c: Removed un-needed code in set_button,
	  changed for hd-util modifications 	  